[package]
name = "os"
version = "0.1.0"
authors = ["Fchen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sbi-rt = {version = "0.0.2", features = ["legacy"]}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }


[profile.release]
debug = true
overflow-checks = true
[profile.dev]
debug = true
overflow-checks = true
