workspace = { members = ["getinfo","httpie","myallocator","thumbor",
    "guessing_game", "rust_by_example", "rust_lang_book", "minigrep"] }
[package]
name = "rust-study"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
